--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,11 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />
+    /> 
+    
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Gantari&display=swap" rel="stylesheet">
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
